# did-web-server

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  TODO.md  cliff.toml  commercial-license.txt  default.nix  docker-compose.yml  flake.nix  manifest.json
.cargo/: config.toml
.husky/: pre-commit
client/: Justfile  README.md  cli.js  deno.jsonc  import_map.json  kms.js  utils.js
client/lib/: ctx.js  did.js  did.test.js  index.js  sanctuary.js  vc_ld.js  vc_ld.test.js
client/lib/didweb/: did.js  did.test.js  diddoc.js  experiments.js  mod.js
client/lib/didweb/types/: DID.js  DIDDoc.js  DIDWeb.js  PortNumber.js  ProofParameters.js  StructuredDID.js
client/lib/kms/: mod.js
client/lib/sanctuary/: mod.js  utils.js
client/lib/sanctuary/types/: RequestType.js  URLType.js
client/lib/types/: JWK.js  PromiseType.js  ResponseType.js
client/lib/vc/: documentLoader.js  mod.js  vc_ld.js  vc_ld.test.js  vp_ld.js
client/lib/vc/contexts/: ed25519-signature-2020-v1.js
dids/: test  testx
docs/: .gitignore  .prettierrc.yaml  Justfile  README.md  astro.config.mjs  docusaurus.config.js  package-lock.json  package.json
docs/.flake/: flake.nix
docs/docs/: configuration.md  congratulations.md  getting-started.md  index.md  intro.md
docs/docs/deployment/: _category_.json  hosted-service.md  self-hosting.md  test-server.md
docs/docs/did-management/: _category_.json  deactivate-a-did.md  register-a-did.md  resolve-a-did.md  update-a-did.md
docs/figures/: architecture.puml  did-creation-components.puml
docs/openapi/: openapi.yaml
docs/public/: openapi.yaml
docs/public/api/: openapi.json
docs/src/content/docs/: configuration.md  congratulations.md  getting-started.md  index.md
docs/src/content/docs/deployment/: hosted-service.md  local-test-server.md  self-hosting.md  test-server.md
docs/src/content/docs/did-management/: deactivate-a-did.md  deactivate-did.md  register-a-did.md  register-did.md  resolve-a-did.md  resolve-did.md  update-a-did.md  update-did.md
docs/src/css/: custom.css
docs/src/pages/: index.jsx
docs/src/styles/: custom.css
openapi/: openapi.yaml  schema.json
src/: config.rs  content_types.rs  did.rs  error.rs  main.rs  resolver.rs  store.rs  test.rs  test_resolver.rs  util.rs  utils.rs
src/__fixtures__/: invalid-diddoc.json  not-owner.jwk  owner.jwk  valid-did.json  valid-did.jwk  valid-did_update-invalid.json  valid-did_update-signed.json  valid-did_update-unsigned.json  valid-did_update.json  valid-did_update.jwk
src/store/: file.rs  mem.rs  mod.rs
src/test/: utils.rs
