[package]
name = "did-web-server"
version = "0.1.0"
edition = "2021"

[features]
fail-on-warnings = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0.4.22"
dashmap = "~5.4.0"
did-method-key = { version = "^0.2.1", git = "https://github.com/identinet/ssi.git" }
did-web = { version = "^0.2.1", git = "https://github.com/identinet/ssi.git" }
did-jwk = { version = "^0.1.1", git = "https://github.com/identinet/ssi.git" }
lazy_static = "^1.4.0"
regex = "^1"
rocket = { version = "^0.5.0-rc.3", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha256 = "^1"
iref = "^2.2.3"
ssi = { version = "~0.7.0", features = [
  "w3c",
  "rsa",
  "ed25519",
  "http-did",
], default-features = false, git = "https://github.com/identinet/ssi.git" }
ssi-dids = { version = "~0.1.1", git = "https://github.com/identinet/ssi.git" }
ssi-json-ld = { version = "~0.2.2", git = "https://github.com/identinet/ssi.git" }

[dev-dependencies]
async-trait = "^0.1"
either = "^1.8.0"
