# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "~0.4.22"
dashmap = "~5.4.0"
iref = "^2.2.3"
lazy_static = "^1.4.0"
regex = "^1"
serde_json = "^1.0"
sha256 = "^1"

[dependencies.did-jwk]
git = "https://github.com/identinet/ssi.git"
version = "^0.1.1"

[dependencies.did-method-key]
git = "https://github.com/identinet/ssi.git"
version = "^0.2.1"

[dependencies.did-web]
git = "https://github.com/identinet/ssi.git"
version = "^0.2.1"

[dependencies.rocket]
features = ["json", "tls"]
version = "^0.5.1"

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[dependencies.ssi]
default-features = false
features = ["w3c", "rsa", "ed25519", "http-did"]
git = "https://github.com/identinet/ssi.git"
version = "~0.7.0"

[dependencies.ssi-dids]
git = "https://github.com/identinet/ssi.git"
version = "~0.1.1"

[dependencies.ssi-json-ld]
git = "https://github.com/identinet/ssi.git"
version = "~0.2.2"

[dev-dependencies]
async-trait = "^0.1"
either = "^1.8.0"

[features]
fail-on-warnings = []

[package]
authors = ["identinet GmbH"]
categories = ["web-programming::http-server"]
description = "did-web-server is a self-sovereign identity for the web"
documentation = "https://dws.identinet.io"
edition = "2021"
homepage = "https://github.com/identinet/did-web-server"
keywords = ["ssi", "did", "http"]
name = "did-web-server"
repository = "https://github.com/identinet/did-web-server"
version = "0.2.0"
